Accommodating null or empty roles in the user entity.