@@ -5,10 +5,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "USERS")
@@ -76,11 +74,9 @@ public class UserEntity implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.unmodifiableList(
-                getRoles().stream()
-                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                        .toList()
-        );
+        return roles != null && !roles.isEmpty()
+                ? getRoles().stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role)).collect(Collectors.toList())
+                : Collections.emptyList();  // Return empty authorities if no roles
     }
 
     public String getPassword() {
@@ -92,11 +88,33 @@ public class UserEntity implements UserDetails {
     }
 
     public List<String> getRoles() {
-        return roles != null ? Arrays.asList(roles.split(",")) : Collections.emptyList();
+        return roles != null && !roles.isEmpty() ? Arrays.asList(roles.split(",")) : Collections.emptyList();
 
     }
 
     public void setRoles(List<String> roles) {
-        this.roles = roles != null ? String.join(",", roles) : null;
+//        this.roles = roles != null ? String.join(",", roles) : null;
+        if (roles == null || roles.isEmpty()) {
+            this.roles = "";
+        } else {
+            this.roles = roles.stream()
+                    .map(String::trim)  // Remove any extra spaces around roles
+                    .filter(role -> !role.isEmpty())  // Remove empty roles
+                    .collect(Collectors.joining(","));
+        }
     }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        UserEntity that = (UserEntity) o;
+        return username.equals(that.username);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(username);
+    }
+
 }
